sopa de letras para probar

--- a/funciones/conVectores/sopaLetras.in
+++ b/funciones/conVectores/sopaLetras.in
@@ -1,6 +1,6 @@
 10 10 
-AAAAAPAAAA
-AAGATOAAAA
+AaAAAPAAAA
+AAGatoAAAA
 AAAAALAAAA
 AAAAALAAAA
 AAAAAOAAAA
@@ -10,6 +10,6 @@ AAAAAAAAAA
 AAAAAAAAAA
 AAAAAAAAAA
 3
-GATO
-POLLO
+gato
+poLlo
 PERRO
