--- a/funciones/conVectores/sopaLetras.in
+++ b/funciones/conVectores/sopaLetras.in
@@ -1,6 +1,6 @@
 10 10 
 AaAAAPAAAA
-AAGatoAAAA
+AAGato AAA
 AAAAALAAAA
 AAAAALAAAA
 AAAAAOAAAA
@@ -13,3 +13,4 @@ AAAAAAAAAA
 gato
 poLlo
 PERRO
+https://github.com/moiseserg/peUTM/tree/master/funciones/conVectores
